Update footer overview

--- a/queensofgoodness/bees.html
+++ b/queensofgoodness/bees.html
@@ -235,10 +235,10 @@
       <div class="container text-primary">
         <div class="row row-cols-2 row-cols-sm-2 g-3">
           <div class="col-8">
-            <h5 class="mb-4 text-center"><img src="static/img/Queens-Of-Goodness-Horizontal-Logo-transparent-bg.svg" height="48" alt=""></h5>
-            <p class="text-center">Raw Local Honey & Premium Ingredients<br>
-              -- nutritious freeze-dried whole fruits --<br>
-              -- fair-trade & single origin spices --</p>
+            <p class="mb-4 text-center"><img src="static/img/Queens-Of-Goodness-Raw-Honey-transparent-BG.svg" width=50% alt=""></p>
+            <p class="text-center">Raw Local Honey</p>
+            <p class="text-center">Nutritious freeze-dried fruits</p>
+            <p class="text-center">Fair-trade & single origin spices</p>
             <div class="social-links">
               <a href="https://www.facebook.com/profile.php?id=61556597102293" class="social-icon bg-primary"><i class="fab fa-facebook-f fa-lg"></i></a>
               <a href="https://instagram.com/QueensofGoodness" class="social-icon bg-danger"><i class="fab fa-instagram fa-lg"></i></a>
