Update footer overviea and hero textw

--- a/queensofgoodness/index.html
+++ b/queensofgoodness/index.html
@@ -135,10 +135,13 @@
             <div class="card-header text-center">Premium Creamed Raw Honey</div>
             <div class="card-body">
               <p class="card-text">
-                We begin with raw local honey sourced from our trusted beekeepers. Using a week long
-                crystallization process, we transform it into a creamy, spreadable honey. Then,
-                we add premium fair-trade and single origin spices and nutritious freeze-dried whole fruits to create
-                our unique blends.</p>
+                Our premium creamed raw honey is crafted from raw honey sourced directly
+                from trusted local beekeepers and enriched with pure, fair-trade,
+                single-origin spices and nutrient-rich freeze-dried fruits. Each small
+                batch is hand-crafted using a proprietary week-long crystallization and
+                blending process that yields a velvety smooth, spreadable product with
+                distinctive flavors and all the natural benefits of raw local honey.
+              </p>
             </div>
           </div>
         </div>
@@ -268,7 +271,7 @@
         </div>
       </div>
 
-      <div class="row row-cols-2 g-3">
+      <div class="row row-cols-1 rows-cols-md-2 g-3">
         <div class="col">
           <div class="card h-100">
             <div class="card-header text-center">Education & Events</div>
@@ -302,10 +305,10 @@
       <div class="container text-primary">
         <div class="row row-cols-2 row-cols-sm-2 g-3">
           <div class="col-8">
-            <h5 class="mb-4 text-center"><img src="static/img/Queens-Of-Goodness-Horizontal-Logo-transparent-bg.svg" height="48" alt=""></h5>
-            <p class="text-center">Raw Local Honey & Premium Ingredients<br>
-              -- nutritious freeze-dried whole fruits --<br>
-              -- fair-trade & single origin spices --</p>
+            <p class="mb-4 text-center"><img src="static/img/Queens-Of-Goodness-Raw-Honey-transparent-BG.svg" width=50% alt=""></p>
+            <p class="text-center">Raw Local Honey</p>
+            <p class="text-center">Nutritious freeze-dried fruits</p>
+            <p class="text-center">Fair-trade & single origin spices</p>
             <div class="social-links">
               <a href="https://www.facebook.com/profile.php?id=61556597102293" class="social-icon bg-primary"><i class="fab fa-facebook-f fa-lg"></i></a>
               <a href="https://instagram.com/QueensofGoodness" class="social-icon bg-danger"><i class="fab fa-instagram fa-lg"></i></a>
