Update footer overview, organic and import text

--- a/queensofgoodness/honey.html
+++ b/queensofgoodness/honey.html
@@ -163,10 +163,10 @@
             <div class="card-body">
               <h5 class="card-title text-center">Know What You're Buying</h5>
               <p class="card-text">
-                There are no USDA standards for certified organic honey. Bees can travel for miles in search of flowers.
-                Most organic honey is certified to EU standards
-                and imported from South America, Mexico and India.
-                The main criteria for the EU standards are:
+                There are no USDA standards for certified organic honey. Bees can
+                travel for miles in search of flowers.  Most organic honey is
+                certified to EU standards and imported from South America, Mexico
+                and India.  The main criteria for the EU standards are:
                 <ul>
                   <li>The surrounding area (3 km radius) be predominantly covered by organic, low input farmland or natural vegetation and free of major sources of pollution, such as roads and industry.</li>
                   <li>Hives be made from natural materials, diseases and pests must be managed using natural solutions and wax should be tested for unauthorized substances.</li>
@@ -190,6 +190,12 @@
                 around the world - the National Honey Board recognizes more than 300
                 varieties. Most of these are monoflorals like Clover, Manuka,
                 or Buckwheat that are produced primarily from a single type of flower.
+              </p>
+
+              <p class="card-text">
+                The US does not produce enough honey to satisfy demand. Imported honey makes
+                up about 70% of the total consumption. India, Argentina, Brazil and Vietnam
+                account for about 80% of the total imports.
               </p>
 
               <p class="card-text">
@@ -244,10 +250,10 @@
       <div class="container text-primary">
         <div class="row row-cols-2 row-cols-sm-2 g-3">
           <div class="col-8">
-            <h5 class="mb-4 text-center"><img src="static/img/Queens-Of-Goodness-Horizontal-Logo-transparent-bg.svg" height="48" alt=""></h5>
-            <p class="text-center">Raw Local Honey & Premium Ingredients<br>
-              -- nutritious freeze-dried whole fruits --<br>
-              -- fair-trade & single origin spices --</p>
+            <p class="mb-4 text-center"><img src="static/img/Queens-Of-Goodness-Raw-Honey-transparent-BG.svg" width=50% alt=""></p>
+            <p class="text-center">Raw Local Honey</p>
+            <p class="text-center">Nutritious freeze-dried fruits</p>
+            <p class="text-center">Fair-trade & single origin spices</p>
             <div class="social-links">
               <a href="https://www.facebook.com/profile.php?id=61556597102293" class="social-icon bg-primary"><i class="fab fa-facebook-f fa-lg"></i></a>
               <a href="https://instagram.com/QueensofGoodness" class="social-icon bg-danger"><i class="fab fa-instagram fa-lg"></i></a>
